# GroundFiltering

./: .gitattributes  README.md
RRG Data/tris/: README.md  textures.txt  triangles134567.txt
Source Code/: CMakeLists.txt  cmdline.h  main.cpp  triangle.h  trianglereader.cpp  trianglereader.h  vec3d.h  vertex.h
Source Code/CSF/: BVHIntersector.h  KDTree1.cpp  KDTree1.h  cloth.cpp  cloth.h  csf4tri.cpp  csf4tri.h  particalaltitudefinder.cpp  particalaltitudefinder.h  particle.cpp  particle.h  splittriangles2terrain.cpp  splittriangles2terrain.h
Source Code/Fast-BVH/: CMakeLists.txt
Source Code/Fast-BVH/include/FastBVH/: BuildStrategy.h  BuildStrategy1.h  Traverser.h
Source Code/yutils/: Cfg.h  ConvertUTF.cpp
